1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m: Change SIGNATURE_FILE to swarmconfig.h,
	SIGNATURE_SUBPATH to include/ and SIGNATURE_PATH to 
	incclude/SIGNATURE_FILE.

1998-10-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment. Swarm 1.3.1 released.

	* Arguments.m ([Arguments -_getSwarmHome_:]): Do a search
	for SWARMHOME if value in environment variable doesn't have
	the signature file.

1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* Arguments.m (dropDirectory): Remove.
	(findDirectory, countSlashes, findSwarm, [Arguments
	-_runningFromInstall_]): Use dropdir (from misc) instead of
	dropDirectory.

1998-10-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments -_getSwarmHome_:], [Arguments
	-getSwarmHome]): New method takes code of getSwarmHome, except it
	calls returns findSwarm if argument is set.
	([Arguments -_getPath_:subpath:]): Use ignoringEnvFlag to
	get the SWARMHOME recognized by _runningFromInstall_.

	* Arguments.h (Arguments): New ivar ignoringEnvFlag.

	* swarm_rts_routines.[hm] (skip_offset, skip_type_qualifiers): 
	Don't inline, this causes gratuitious warning messages from egcs.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.[hm], objectbase.h ([Arguments
	+createArgc:Argv:version:bugAddress:]): Added version:bugAddress:.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActivityControl.h (ActivityControl): Make status of type
	id <Symbol>.

1998-09-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Add char support.  Add
	workaround for bugs in libffi for shorts (like chars).

	* objectbase.h (val_t): Add _short and _ushort.

	* VarProbe.m ([VarProbe -createEnd]): Add short and unsigned short.
	Use variable to hold type tag.
	([VarProbe -probeAsPointer:]): Add char, unsigned char, short and
	unsigned short.
	([VarProbe -probeAsInt:]): Add short and unsigned short.